k8s/mongo-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-backend
  template:
    metadata:
      labels:
        app: mongo-backend
    spec:
      containers:
        - name: mongo-backend
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-vol  
      volumes:
        - name: mongo-vol
          persistentVolumeClaim: 
            claimName: host-pvc      
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  ports:
    - name: tcp
      port: 27017
      targetPort: 27017
  selector:
    app: mongo-backend
