k8s/node-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-backend
  template:
    metadata:
      labels:
       
        app: node-backend
    spec:
      containers:
        - name: node-backend
          image: radhe2003/multi:02
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  ports:
    - name: tcp
      port: 3000
      targetPort: 3000
  selector:
    app: node-backend   
  type: ClusterIP
